# RustyRaven

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  forward-kubernetes.sh
.sqlx/: query-011fe1c4c468371f6210aab3a0b21884e3b40b496483bfeb538edda89c78f605.json  query-064bc131cdfafecd5ccd8ad0d81cd4b11adc95abf957666ca057a58d8e049f88.json  query-0954d729aee855be574f06978ba7e17bbd9955c0b62ee7fc0ee21f3bf7183777.json  query-142b8ce77b47637a0017760223a1069e693749215350fc68d267a3a91b087cf0.json  query-1ace8c64aed5ade8021c86b58c2fb2cabff15ce502d1f7ef94c5105fdea98925.json  query-1d43a7730466f238035a5384a8cd6b31aea01b3cf6f3f3c5084f2cfe3907dd84.json  query-1eb4b928c2f30200cd55ca0ad689131b2f1a2260e254ba8d7c6b0c580b3ff652.json  query-1f0a044d7da09723931f1f33a0c0b5544201dadac981dd54f194aa03a483ad49.json  query-25b45534398c7ef448e6dd8611fd85a7d9cd4a40a1b26278d90441c2892e1ec5.json  query-25ed45dfc5513bcfb41755abaf09e61d262c3991d4112f4e9c4a51e117f96ce1.json  query-264a95b54ec468c7366a3c1b99bafc22fec602a41a7683cffbeae969de973fcd.json  query-2777a79fb9a45739655a80e9b86ce0d73d76c0ec4a5d5bc4199ed767d29e398a.json  query-2d9dc0465442667456939367b3337a72bab44063c3f50b3f2567ac2d19bb67f4.json  query-379b3057082eecb98adf62ce94de39f5e09bed03e7533d5ff3fa80cdb828afd6.json  query-3a4d9a6ef17cf5111c82697ec7129af2614e0a46941aba8c1fe674b808d9197d.json  query-3adfc1137533e9e09bcc549ee0a4df9132f2bf2088a33cd7ebc28bcb2f74b83c.json  query-3af8cb53f9d3ca7859d12ccd588fb5569d397cef15f4bb0c805db273e42f979b.json  query-40c56794ff904cfa0f2fdd943a537ccd2201914353f0afc2b1155c44eb682643.json  query-44bf2d22f0a21a8d8f393a2ea4602640a6ef7edcb81fab51045bde1a0f1c43f9.json  query-46c9f01efa00d3c4e75b8b8cc0d0978f39437c5f667c71e52593be5a817300e3.json  query-481eb0fd6e80ef47ec41a4f3f90ba05f1d2d6b8c7c733a668ef1426b6748341b.json  query-4c84375c4ce18cd5ddd30d3043a7a8f7ce41d36d5fcb24042c349e376c2ab064.json  query-4f83d154aa42bcf26558bd94b96d7e216f567f6a2800b7272c841db04240ced9.json  query-530c96c73012e3d8f29b474e509efa8241a328b56a3a599efc261990f074fa37.json  query-56a6375a3cb90dd55dcdd413a9ce4639c1f0a0a5c2b02082e16b24f315ddb029.json  query-56e4b70c33f6f58cab833a1698b2eb412e6d8349bcf32f66996096ca7ccf7dc9.json  query-5edbf9f1d5970b0bfb1373f081d471b91ef5356bb36cbf12e25ec373d8a3bfeb.json  query-616f2cd77b4b69b6c5e6c588cae427b37c752c899dd0b2f6d2fb0a91a55bc4cf.json  query-63f4bda6c9aa1902966fe1097d56275eb6d37114dd132598fe172ec8ad510067.json  query-64dae8cf1713fe23c86f299bb8da572d158eceba613844a224d88384275a2533.json  query-668e4c2d6bccd655f995c3988c9fc41301607de0270cf7c5497e20f4241ba824.json  query-709f43442184026960a30a35480e00968a4142152098e2a7f1411cd66eb4352f.json  query-7df3008a1cc0b674c329387a34ee3eafbb1c697263b436ccb8cdc30ad0673341.json  query-80490705cbbd6709d5c3bc2663e6bbf83669328d0c51abf0786eea142a6bbfe6.json  query-811f4c302d63097a9384ca8049d3ad3fc6fea33a755ba76f74e86c3f38b579c4.json  query-84625b0786576061539cc336b271fd4ba3dfff031b2bf824470ff8ac62b91e31.json  query-8a11d51bc7950133429e0120ca4592b40424c551615c5a9b50ee323ab9546667.json  query-8fac2731fbf512c10f569c7085a7a57e4d19991c5189d39e8f290b12176cfbee.json  query-8fad6b4eb025a1450c237575d95f828aa5666a80c775b2230725e2a731ea8d2a.json  query-981e7a5127e7b9ba22f7d40fc042dbff10bc9ea09235ba57993adf8248690481.json  (+28 more)
api/: Cargo.toml
api/src/: category.rs  checkout.rs  product.rs
crates/api/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: axum.rs  endpoints.rs  error.rs  lib.rs  state.rs
crates/db/: Cargo.toml  setup.sql
crates/db/sql/: create_product.sql  create_user.sql  get_previews.sql  get_previews_random.sql  get_specified_products.sql  materialized_image_view.sql  materialized_product_paths.sql  size_estimates.sql
crates/db/sql/images/: create_image.sql  main.sql  product_associations.sql  product_images.sql
crates/db/sql/table_definitions/: 10-user-passkeys.sql  6-product_association_index.sql  7-pending_orders.sql  9-users.sql
crates/db/sql/type_definitions/: 0-image_variant.sql
crates/db/src/: auth.rs  category.rs  checkout.rs  lib.rs  postgres.rs  product.rs
crates/image/: Cargo.toml
crates/image/src/: cache.rs  lib.rs  object_storage.rs  thumbnails.rs
crates/payment/: Cargo.toml
crates/payment/src/: lib.rs  stripe.rs
crates/web/: Cargo.toml  README.md
crates/web/assets/styling/: admin.scss  cart.scss  layout.scss  main.scss  media.scss  reset.css
crates/web/src/: main.rs
crates/web/src/components/: about.rs  cart.rs  category.rs  category_bar.rs  close_button.rs  footer.rs  front_page.rs  header.rs  image_upload.rs  mod.rs  order.rs  product.rs  terms.rs
crates/web/src/components/admin/: auth.rs  category.rs  mod.rs
crates/web/src/components/admin/product/: list.rs  product.rs
crates/web/src/server/: auth.rs  mod.rs
db/: Cargo.toml  setup.sql
db/sql/: all_products.sql  checkout.sql  create_product.sql  get_previews.sql  get_product.sql  image_types.sql  product_table.sql  product_tag.sql  update_product.sql
db/sql/images/: variant
db/sql/table_definitions/: 0-product_categories.sql  1-product_categories_hierarchy.sql  2-images.sql  3-image_variants.sql  4-products.sql  5-product_images.sql  6-product_association_index.sql  7-pending_orders.sql  8-product_reservations.sql
db/sql/type_definitions/: 1-image_info_type.sql
db/src/: category.rs  checkout.rs  lib.rs  main.rs  postgres.rs  product.rs
docs/: SJF-concept(1).drawio
image/: Cargo.toml
image/src/: cache.rs  lib.rs  object_storage.rs  thumbnails.rs
kubernetes/: deployment.yaml  ingress.yaml  postgres-cluster.yaml
kubernetes/garage/: local-volume.yaml  storage-class.yaml
web/: Cargo.toml  Dioxus.toml
web/assets/styling/: admin.scss  cart.scss  defines.scss  main.css  main.scss
web/src/: main.rs
web/src/components/: about.rs  cart.rs  category.rs  category_bar.rs  close_button.rs  footer.rs  front_page.rs  header.rs  mod.rs  product.rs  terms.rs
web/src/components/admin/: category.rs
web/src/components/admin/product/: list.rs  product.rs
web/src/components/product/: list.rs  mod.rs  product.rs
web/src/server/: mod.rs
(+12 files in other folders)
