[workspace]
resolver = "2"
members = ["db","web","image","api"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
urlencoding = "2.1.3"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug-assertions = true

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
