[workspace]
resolver = "2"
members = ["crates/db","crates/web","crates/image","crates/api","crates/payment"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
urlencoding = "2.1.3"
tracing = "0.1.41"
thiserror = "2.0.12"
futures-util = "0.3.31"
once_cell = "1.21.3"
dotenvy = {version="0.15.7"}

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug-assertions = true

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
