[workspace]
resolver = "2"
members = ["crates/db","crates/web","crates/image","crates/api","crates/payment","crates/auth"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
urlencoding = "2.1.3"
tracing = "0.1.41"
thiserror = "2.0.12"
futures-util = "0.3.31"
once_cell = "1.21.3"
dotenvy = {version="0.15.7"}
axum-login = {version="0.16.0"}
axum = {version="0.7.9"}
axum-prometheus = {version="0.7.0", default-features=false, features=["prometheus"]}
tokio = { version = "1"}

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug-assertions = true

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

