[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.5.37", features = ["derive"]}
log = "0.4.27"
once_cell = "1.21.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres" ] }
tokio = { version = "1", features = ["rt", "macros","net","rt-multi-thread"] }
