[package]
name = "sjf_db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
serde = { workspace=true }
tracing = {workspace = true }
thiserror = {workspace = true }
sjf_api = {path="../api"}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres","chrono","uuid"] }
tokio = { version = "1", features = ["rt", "macros","net","rt-multi-thread"] }
futures-util = "0.3.31"
