[package]
name = "sjf"
version = "0.1.0"
authors = ["Lukas Rahmn <l.rahmn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
db = {path="../db", optional=true}
pretty_env_logger = {version="0.5.0",optional=true}
tokio = { version = "1", features = ["rt", "macros","net","rt-multi-thread"],optional=true }
axum = {version="0.7.9",optional=true}
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
server = ["dioxus/server" ,  "dep:db", "dep:pretty_env_logger", "dep:tokio","dep:axum"]

