[package]
name = "sjf_image"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
sjf_db = {path="../db"}
chrono = "0.4.41"
tokio = { version = "1.45.0", features = ["sync"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
tracing = {workspace = true }
aws-sdk-s3 = "1.98.0"
thiserror = {workspace = true }
dotenvy = {workspace=true }

