[package]
name = "sjf_payment"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stripe = {version="0.41.0", default-features=false, features=["runtime-tokio-hyper-rustls", "checkout","billing","async","stream"] }
tracing = {workspace = true }
thiserror = {workspace = true }
futures-util = {workspace=true}
once_cell = {workspace=true}
sjf_db = {path="../db"}
sjf_api = {path="../api"}
dotenvy = {workspace=true }