[package]
name = "sjf_payment"
version.workspace = true
authors.workspace = true
edition.workspace=  true

[dependencies]
async-stripe = {version="0.41.0", default-features=false, features=["runtime-tokio-hyper-rustls", "checkout","billing","async","stream"] }
tracing = {workspace = true }
thiserror = {workspace = true }
futures-util = {workspace=true}
once_cell = {workspace=true}
sjf_db = {path="../db"}
sjf_api = {path="../api"}
dotenvy = {workspace=true }