[package]
name = "sjf"
version = "0.1.0"
authors = ["Lukas Rahmn <l.rahmn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
sjf_db = {path="../db", optional=true}
sjf_api = {path="../api"}
sjf_payment = {path="../payment",optional=true}
sjf_image = {path="../image", optional=true}
sjf_auth = {path="../auth", optional=true}
pretty_env_logger = {version="0.5.0",optional=true}
thiserror = {workspace = true }
tokio = { workspace=true, features = ["rt", "macros","net","rt-multi-thread"],optional=true }
wasmtimer = { version = "0.4.2", optional=true}
axum = {workspace=true,optional=true}
serde = { workspace=true }
futures = {version="0.3.31", optional=true}
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
urlencoding = {workspace=true, optional=true}
dotenvy = {workspace=true, optional=true}
web-sys = { version = "0.3.77", features = ["Window", "Storage","Navigator","CredentialsContainer","CredentialCreationOptions","PublicKeyCredentialCreationOptions","PublicKeyCredentialRpEntity","PublicKeyCredentialUserEntity","PublicKeyCredential","CredentialRequestOptions"], optional=true }
serde_json = {version="1.0.142", optional=true}
axum-login = {workspace=true, optional=true}
webauthn-rs-proto = {version="0.5.2", optional=true}
wasm-bindgen-futures = "0.4.50"
axum-prometheus ={workspace=true,optional=true} 
[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "dep:web-sys","dep:wasmtimer", "dep:serde_json", "dep:webauthn-rs-proto", "webauthn-rs-proto/wasm"]
server = ["dioxus/server", "dep:axum-prometheus", "dep:dotenvy" , "dep:urlencoding", "dep:sjf_payment",  "dep:sjf_db","dep:futures", "dep:sjf_image", "dep:pretty_env_logger", "dep:tokio","dep:axum","dep:axum-login","dep:sjf_auth"]
